monitoring/stable/prometheus-operator/templates/prometheus-operator/prom-operator-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-alertmanager-grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: k8s-grafana.hire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-grafana
          servicePort: 80
  - host: k8s-prometheus.hire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-prometheus
          servicePort: 9090
  - host: k8s-alertmanager.hire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-alertmanager
          servicePort: 9093
  - host: k8s-pom-operator.hire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-operator
          servicePort: 8080
